// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Descriptions/demo/align.md correctly 1`] = `
<div>
  <div
    class="arco-descriptions arco-descriptions-layout-horizontal"
    style="margin-bottom:20px"
  >
    <div
      class="arco-descriptions-title"
    >
      User Info
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right"
            >
              Name :
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
            <td
              class="arco-descriptions-item-label"
              style="text-align:right"
            >
              Mobile :
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
            <td
              class="arco-descriptions-item-label"
              style="text-align:right"
            >
              Residence :
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right"
            >
              Hometown :
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
            <td
              class="arco-descriptions-item-label"
              style="text-align:right"
            >
              Address :
            </td>
            <td
              class="arco-descriptions-item-value"
              colspan="3"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="arco-descriptions arco-descriptions-layout-inline-vertical"
  >
    <div
      class="arco-descriptions-title"
    >
      User Info
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Name
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Socrates
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Mobile
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                123-1234-1234
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Residence
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Beijing
              </div>
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Hometown
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Beijing
              </div>
            </td>
            <td
              class="arco-descriptions-item"
              colspan="2"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Address
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Yingdu Building, Zhichun Road, Beijing
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders Descriptions/demo/basic.md correctly 1`] = `
<div
  class="arco-descriptions arco-descriptions-layout-inline-horizontal"
>
  <div
    class="arco-descriptions-title"
  >
    User Info
  </div>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item"
          >
            <div
              class="arco-descriptions-item-label-inline"
            >
              Name :
            </div>
            <div
              class="arco-descriptions-item-value-inline"
            >
              Socrates
            </div>
          </td>
          <td
            class="arco-descriptions-item"
          >
            <div
              class="arco-descriptions-item-label-inline"
            >
              Mobile :
            </div>
            <div
              class="arco-descriptions-item-value-inline"
            >
              123-1234-1234
            </div>
          </td>
          <td
            class="arco-descriptions-item"
          >
            <div
              class="arco-descriptions-item-label-inline"
            >
              Residence :
            </div>
            <div
              class="arco-descriptions-item-value-inline"
            >
              Beijing
            </div>
          </td>
        </tr>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item"
          >
            <div
              class="arco-descriptions-item-label-inline"
            >
              Hometown :
            </div>
            <div
              class="arco-descriptions-item-value-inline"
            >
              Beijing
            </div>
          </td>
          <td
            class="arco-descriptions-item"
            colspan="2"
          >
            <div
              class="arco-descriptions-item-label-inline"
            >
              Address :
            </div>
            <div
              class="arco-descriptions-item-value-inline"
            >
              Yingdu Building, Zhichun Road, Beijing
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders Descriptions/demo/border.md correctly 1`] = `
<div
  class="arco-descriptions arco-descriptions-border arco-descriptions-layout-horizontal"
>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item-label"
          >
            Name
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            Socrates
          </td>
          <td
            class="arco-descriptions-item-label"
          >
            Mobile
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            123-1234-1234
          </td>
          <td
            class="arco-descriptions-item-label"
          >
            Residence
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            Beijing
          </td>
        </tr>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item-label"
          >
            Hometown
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            Beijing
          </td>
          <td
            class="arco-descriptions-item-label"
          >
            Date of Birth
          </td>
          <td
            class="arco-descriptions-item-value"
            colspan="3"
          >
            2020-05-15
          </td>
        </tr>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item-label"
          >
            Address
          </td>
          <td
            class="arco-descriptions-item-value"
            colspan="5"
          >
            Yingdu Building, Zhichun Road, Beijing
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders Descriptions/demo/layout.md correctly 1`] = `
<div>
  <div
    class="arco-descriptions arco-descriptions-layout-inline-horizontal"
    style="margin-bottom:20px"
  >
    <div
      class="arco-descriptions-title"
    >
      Inline Horizontal
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Name:
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Socrates
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Mobile:
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                123-1234-1234
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Residence:
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Beijing
              </div>
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Hometown:
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Beijing
              </div>
            </td>
            <td
              class="arco-descriptions-item"
              colspan="2"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Date of Birth:
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                2020-05-15
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="arco-descriptions arco-descriptions-border arco-descriptions-layout-horizontal"
    style="margin-bottom:20px"
  >
    <div
      class="arco-descriptions-title"
    >
      Horizontal
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Name
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Mobile
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Residence
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Hometown
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Date of Birth
            </td>
            <td
              class="arco-descriptions-item-value"
              colspan="3"
            >
              2020-05-15
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Address
            </td>
            <td
              class="arco-descriptions-item-value"
              colspan="5"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="arco-descriptions arco-descriptions-border arco-descriptions-layout-vertical"
    style="margin-bottom:20px"
  >
    <div
      class="arco-descriptions-title"
    >
      Vertical
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Name
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Hometown
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Mobile
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Date of Birth
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Residence
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              2020-05-15
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Gender
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Ethnicity
            </td>
            <td
              class="arco-descriptions-item-label"
              colspan="3"
            >
              Address
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-value"
            >
              Male
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Han
            </td>
            <td
              class="arco-descriptions-item-value"
              colspan="3"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="arco-descriptions arco-descriptions-border arco-descriptions-layout-inline-vertical"
  >
    <div
      class="arco-descriptions-title"
    >
      Inline Vertical
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Name
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Socrates
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Hometown
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Beijing
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Mobile
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                123-1234-1234
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Date of Birth
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                2020-05-15
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Residence
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Beijing
              </div>
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Gender
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Male
              </div>
            </td>
            <td
              class="arco-descriptions-item"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Ethnicity
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Han
              </div>
            </td>
            <td
              class="arco-descriptions-item"
              colspan="3"
            >
              <div
                class="arco-descriptions-item-label-inline"
              >
                Address
              </div>
              <div
                class="arco-descriptions-item-value-inline"
              >
                Yingdu Building, Zhichun Road, Beijing
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders Descriptions/demo/responsive.md correctly 1`] = `
<div
  class="arco-descriptions arco-descriptions-border arco-descriptions-layout-horizontal"
>
  <div
    class="arco-descriptions-title"
  >
    Responsive
  </div>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item-label"
          >
            Name
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            Socrates
          </td>
          <td
            class="arco-descriptions-item-label"
          >
            Mobile
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            123-1234-1234
          </td>
          <td
            class="arco-descriptions-item-label"
          >
            Residence
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            Beijing
          </td>
        </tr>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item-label"
          >
            Hometown
          </td>
          <td
            class="arco-descriptions-item-value"
          >
            Beijing
          </td>
          <td
            class="arco-descriptions-item-label"
          >
            Date of Birth
          </td>
          <td
            class="arco-descriptions-item-value"
            colspan="3"
          >
            2020-05-15
          </td>
        </tr>
        <tr
          class="arco-descriptions-row"
        >
          <td
            class="arco-descriptions-item-label"
          >
            Address
          </td>
          <td
            class="arco-descriptions-item-value"
            colspan="5"
          >
            Yingdu Building, Zhichun Road, Beijing
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders Descriptions/demo/single.md correctly 1`] = `
<div>
  <div
    class="arco-descriptions arco-descriptions-layout-horizontal"
    style="margin-bottom:20px"
  >
    <div
      class="arco-descriptions-title"
    >
      User Info
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:36px"
            >
              Name
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:36px"
            >
              Mobile
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:36px"
            >
              Residence
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:36px"
            >
              Hometown
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:36px"
            >
              Address
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="arco-descriptions arco-descriptions-layout-horizontal"
  >
    <div
      class="arco-descriptions-title"
    >
      User Info
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right;padding-right:36px"
            >
              Name
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right;padding-right:36px"
            >
              Mobile
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right;padding-right:36px"
            >
              Residence
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right;padding-right:36px"
            >
              Hometown
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="text-align:right;padding-right:36px"
            >
              Address
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders Descriptions/demo/size.md correctly 1`] = `
<div>
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    role="radiogroup"
    style="margin-bottom:20px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="mini"
      />
      <span
        class="arco-radio-button-inner"
      >
        mini
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="small"
      />
      <span
        class="arco-radio-button-inner"
      >
        small
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="medium"
      />
      <span
        class="arco-radio-button-inner"
      >
        medium
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        type="radio"
        value="default"
      />
      <span
        class="arco-radio-button-inner"
      >
        default
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="large"
      />
      <span
        class="arco-radio-button-inner"
      >
        large
      </span>
    </label>
  </div>
  <div
    class="arco-descriptions arco-descriptions-border arco-descriptions-layout-horizontal arco-descriptions-size-default"
    style="margin-bottom:20px"
  >
    <div
      class="arco-descriptions-title"
    >
      User Info
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Name
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Mobile
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Residence
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Hometown
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
            <td
              class="arco-descriptions-item-label"
            >
              Date of Birth
            </td>
            <td
              class="arco-descriptions-item-value"
              colspan="3"
            >
              2020-05-15
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
            >
              Address
            </td>
            <td
              class="arco-descriptions-item-value"
              colspan="5"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-default"
  >
    <div
      class="arco-descriptions-title"
    >
      User Info
    </div>
    <div
      class="arco-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="arco-descriptions-table"
      >
        <tbody>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:40px"
            >
              Name
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Socrates
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:40px"
            >
              Mobile
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              123-1234-1234
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:40px"
            >
              Residence
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:40px"
            >
              Hometown
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Beijing
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:40px"
            >
              Date of Birth
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              2020-05-15
            </td>
          </tr>
          <tr
            class="arco-descriptions-row"
          >
            <td
              class="arco-descriptions-item-label"
              style="padding-right:40px"
            >
              Address
            </td>
            <td
              class="arco-descriptions-item-value"
            >
              Yingdu Building, Zhichun Road, Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
